--- a/ZotPad/MainStoryboard_iPhone.storyboard
+++ b/ZotPad/MainStoryboard_iPhone.storyboard
@@ -107,17 +107,6 @@
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <view tag="4" contentMode="scaleToFill" id="3IL-X9-oNg" customClass="UIButton">
-                                                    <rect key="frame" x="2" y="2" width="70" height="74"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                                                    <accessibility key="accessibilityConfiguration">
-                                                        <accessibilityTraits key="traits" none="YES" button="YES" image="YES"/>
-                                                    </accessibility>
-                                                    <connections>
-                                                        <action selector="attachmentThumbnailPressed:" destination="21" eventType="touchUpOutside" id="jIM-Xv-mEj"/>
-                                                    </connections>
-                                                </view>
                                                 <view clipsSubviews="YES" tag="3" contentMode="redraw" id="CfO-Fh-tel" customClass="TTStyledTextLabel">
                                                     <rect key="frame" x="75" y="37" width="230" height="30"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
@@ -126,6 +115,14 @@
                                                         <accessibilityTraits key="traits" none="YES" staticText="YES" notEnabled="YES"/>
                                                     </accessibility>
                                                 </view>
+                                                <imageView tag="4" contentMode="scaleToFill" id="CLH-1h-EKZ">
+                                                    <rect key="frame" x="3" y="4" width="64" height="64"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <gestureRecognizers/>
+                                                    <connections>
+                                                        <outletCollection property="gestureRecognizers" destination="QV2-1C-fEa" appends="YES" id="Lhb-bZ-v2V"/>
+                                                    </connections>
+                                                </imageView>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
@@ -222,9 +219,15 @@
                     <navigationItem key="navigationItem" title="Items" id="26"/>
                     <connections>
                         <outlet property="tableView" destination="6Rf-2s-aC2" id="koE-Kd-U2f"/>
+                        <outlet property="tapRecognizer" destination="QV2-1C-fEa" id="GId-uB-ohc"/>
                         <outlet property="toolBar" destination="d3t-PQ-BeY" id="w71-zo-H1a"/>
                     </connections>
                 </viewController>
+                <tapGestureRecognizer id="QV2-1C-fEa">
+                    <connections>
+                        <action selector="attachmentThumbnailPressed:" destination="21" id="GKG-E6-TNP"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="924" y="64"/>
         </scene>
@@ -276,7 +279,77 @@
                     <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
                 </viewController>
             </objects>
-            <point key="canvasLocation" x="924" y="-588"/>
+            <point key="canvasLocation" x="438" y="-638"/>
+        </scene>
+        <!--Attachment Preview View Controller-->
+        <scene sceneID="5Sf-7V-bYY">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="AKt-eq-wWw" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController storyboardIdentifier="AttachmentPreview" autoresizesArchivedViewToFullSize="NO" id="887-2q-suK" customClass="ZPAttachmentPreviewViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="8pt-Qx-3Aj">
+                        <rect key="frame" x="0.0" y="0.0" width="269" height="380"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" id="Wmv-1P-rbV">
+                                <rect key="frame" x="6" y="62" width="256" height="256"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <view alpha="0.5" contentMode="scaleToFill" id="TLz-gg-am0">
+                                <rect key="frame" x="20" y="100" width="229" height="176"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <subviews>
+                                    <label hidden="YES" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" tag="1" contentMode="left" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" id="cjU-a5-haR">
+                                        <rect key="frame" x="20" y="128" width="189" height="23"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" tag="2" contentMode="left" text="Label" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" minimumFontSize="10" id="odu-0V-fkg">
+                                        <rect key="frame" x="20" y="20" width="189" height="97"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <progressView hidden="YES" opaque="NO" tag="3" contentMode="scaleToFill" progress="0.5" id="iGp-hl-6h2">
+                                        <rect key="frame" x="20" y="156" width="189" height="9"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    </progressView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="Zda-xJ-UR2">
+                                        <rect key="frame" x="205" y="146" width="29" height="29"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" size="button"/>
+                                        <state key="normal" image="closeButton.png">
+                                            <color key="titleColor" red="0.19607843137254902" green="0.30980392156862746" blue="0.52156862745098043" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <state key="highlighted">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <nil key="simulatedStatusBarMetrics"/>
+                    <nil key="simulatedTopBarMetrics"/>
+                    <nil key="simulatedBottomBarMetrics"/>
+                    <simulatedOrientationMetrics key="simulatedOrientationMetrics"/>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <connections>
+                        <outlet property="cancelButton" destination="Zda-xJ-UR2" id="OlL-LN-kj3"/>
+                        <outlet property="downloadLabel" destination="cjU-a5-haR" id="6EC-7j-mcP"/>
+                        <outlet property="fileImage" destination="Wmv-1P-rbV" id="y93-AI-vmv"/>
+                        <outlet property="labelBackground" destination="TLz-gg-am0" id="K7b-ol-gWJ"/>
+                        <outlet property="progressView" destination="iGp-hl-6h2" id="GST-lT-0Nj"/>
+                        <outlet property="titleLabel" destination="odu-0V-fkg" id="RvL-vP-ZMv"/>
+                    </connections>
+                </viewController>
+            </objects>
+            <point key="canvasLocation" x="872" y="-635"/>
         </scene>
         <!--Item Detail View Controller - Item details-->
         <scene sceneID="6Br-xj-NwC">
@@ -374,6 +447,63 @@
             <point key="canvasLocation" x="1344" y="64"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="closeButton.png" width="10" height="10"/>
+    </resources>
+    <classes>
+        <class className="TTStyledTextLabel" superclassName="UIView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/TTStyledTextLabel.h"/>
+        </class>
+        <class className="ZPAttachmentPreviewViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ZPAttachmentPreviewViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="cancelButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="downloadLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="fileImage" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="labelBackground" candidateClass="UIView"/>
+                <relationship kind="outlet" name="progressView" candidateClass="UIProgressView"/>
+                <relationship kind="outlet" name="titleLabel" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="ZPAuthenticationDialog" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ZPAuthenticationDialog.h"/>
+            <relationships>
+                <relationship kind="action" name="loadFirstPage:"/>
+                <relationship kind="outlet" name="webView" candidateClass="UIWebView"/>
+            </relationships>
+        </class>
+        <class className="ZPFileImportViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ZPFileImportViewController.h"/>
+        </class>
+        <class className="ZPItemDetailViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ZPItemDetailViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="carousel" candidateClass="iCarousel"/>
+                <relationship kind="outlet" name="detailTableView" candidateClass="UITableView"/>
+            </relationships>
+        </class>
+        <class className="ZPItemListViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ZPItemListViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="attachmentThumbnailPressed:"/>
+                <relationship kind="action" name="sortButtonPressed:"/>
+                <relationship kind="outlet" name="searchBar" candidateClass="UISearchBar"/>
+                <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
+                <relationship kind="outlet" name="tapRecognizer" candidateClass="UIGestureRecognizer"/>
+                <relationship kind="outlet" name="toolBar" candidateClass="UIToolbar"/>
+            </relationships>
+        </class>
+        <class className="ZPLibraryAndCollectionListViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ZPLibraryAndCollectionListViewController.h"/>
+        </class>
+        <class className="iCarousel" superclassName="UIView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/iCarousel.h"/>
+            <relationships>
+                <relationship kind="outlet" name="dataSource"/>
+                <relationship kind="outlet" name="delegate"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
